<resources>
    <string name="app_name">mole</string>
    <string name="debts">Debts</string>
    <string name="profile">Profile</string>
    <string name="search_hint">Поиск</string>
    <string name="plus_prefix">"+ "</string>
    <string name="minus_prefix">"- "</string>
    <string name="mole_message_balance">%1$s%2$d%3$s</string>
    <string name="mole_message_tag">#%1$s</string>
    <string name="postfix_balance">" р."</string>
    <string name="test_action_bar_title_with_back">MOLE</string>
    <string name="test_action_bar_title">Новый Долг</string>
    <string name="dialog_alert_title">Удалить долг</string>
    <string name="dialog_alert_description">Это действие нельзя отменить</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="edit">Редактировать</string>
    <string name="login_exist_error">Такой логин уже существует</string>
    <string name="login_title">Логин</string>
    <string name="vk_login">Войти через VK</string>
    <string name="google_login">Войти через Google</string>
    <string name="login_prefix">\@%s</string>
    <string name="welcome_string">Добро пожаловать!</string>
    <string name="total_debts">Всего: %s p.</string>
    <string name="debts_action_bar">Долги</string>
    <plurals name="debts_plurals">
        <item quantity="one">%1$d долг</item>
        <item quantity="few">%1$d долга</item>
        <item quantity="many">%1$d долгов</item>
        <item quantity="other">%1$d долгов</item>
    </plurals>
    <string name="debug_panel_button">Назад</string>
    <string name="debug_panel_corrupted_token_access">Повредить токен доступа</string>
    <string name="debug_panel_remove_account">Удалить аккаунт</string>
    <string name="debug_panel_remove_remote_account">Удалить аккаунт на сервере</string>
    <string name="debug_panel_corrupted_token_refresh">Повредить рефреш токен</string>
    <string name="profile_icon_description">Profile icon</string>
    <string name="all_debts_profile_title">All debts</string>
    <string name="tags_profile_title">Tags</string>
    <string name="his_debt">Мне \n должны</string>
    <string name="my_debt">Я \n должен</string>
    <string name="new_debt">Новый долг</string>
    <string name="tag_symbol">#%1$s</string>
    <string name="choose_login_title">Логин</string>
    <string name="choose_tag_title">Тег</string>
    <string name="rubles_suffix">.р</string>
    <string name="amount_title">Сумма</string>
    <string name="loading_error">Ошибка загрузки</string>
    <string name="reload">Повторить</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget lacus cursus, euismod purus a, euismod ipsum. Sed egestas leo nec nisl euismod, in convallis lorem pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean mattis imperdiet lacus, non venenatis augue pellentesque ac. Vestibulum blandit cursus finibus. Maecenas eu justo laoreet, vulputate elit quis, rutrum augue. Nunc at viverra magna, a tempus magna. Curabitur et efficitur odio.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget lacus cursus, euismod purus a, euismod ipsum. Sed egestas leo nec nisl euismod, in convallis lorem pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean mattis imperdiet lacus, non venenatis augue pellentesque ac. Vestibulum blandit cursus finibus. Maecenas eu justo laoreet, vulputate elit quis, rutrum augue. Nunc at viverra magna, a tempus magna. Curabitur et efficitur odio.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget lacus cursus, euismod purus a, euismod ipsum. Sed egestas leo nec nisl euismod, in convallis lorem pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean mattis imperdiet lacus, non venenatis augue pellentesque ac. Vestibulum blandit cursus finibus. Maecenas eu justo laoreet, vulputate elit quis, rutrum augue. Nunc at viverra magna, a tempus magna. Curabitur et efficitur odio.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget lacus cursus, euismod purus a, euismod ipsum. Sed egestas leo nec nisl euismod, in convallis lorem pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean mattis imperdiet lacus, non venenatis augue pellentesque ac. Vestibulum blandit cursus finibus. Maecenas eu justo laoreet, vulputate elit quis, rutrum augue. Nunc at viverra magna, a tempus magna. Curabitur et efficitur odio.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget lacus cursus, euismod purus a, euismod ipsum. Sed egestas leo nec nisl euismod, in convallis lorem pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean mattis imperdiet lacus, non venenatis augue pellentesque ac. Vestibulum blandit cursus finibus. Maecenas eu justo laoreet, vulputate elit quis, rutrum augue. Nunc at viverra magna, a tempus magna. Curabitur et efficitur odio.</string>
    <string name="settings_version_underline">Mole for Android %1$s</string>
    <string name="leak_canary_enable">Leak canary enable</string>
    <plurals name="tag_count">
        <item quantity="zero">Нет должников</item>
        <item quantity="one">%1$d должник</item>
        <item quantity="few">%1$d должника</item>
        <item quantity="many">%1$d должников</item>
        <item quantity="other">%1$d должник</item>
    </plurals>
</resources>