<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/top_ellipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_begin_ellipse_top"
        app:layout_constraintBottom_toTopOf="@id/logo"
        app:layout_constraintStart_toEndOf="@id/logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bottom_ellipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_begin_ellipse_bottom"
        app:layout_constraintEnd_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_begin_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/MoleText.Medium.Text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/welcome_string"
        android:textColor="?attr/textColorDisabled"
        app:layout_constraintBottom_toTopOf="@id/vk_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.mole.android.mole.ui.ProgressButtonView
        android:id="@+id/vk_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:button_icon="@drawable/ic_vk"
        app:button_text="@string/vk_login"
        app:button_tint="#4A76A8"
        app:layout_constraintBottom_toTopOf="@id/google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:progress_tint="@color/white"
        app:text_color="@color/white" />

    <com.mole.android.mole.ui.ProgressButtonView
        android:id="@+id/google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:button_icon="@drawable/ic_google"
        app:button_text="@string/google_login"
        app:button_tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:progress_tint="@color/black"
        app:text_color="@color/black" />
</androidx.constraintlayout.widget.ConstraintLayout>